# Please keep all characters in this file in ASCII
# distutils uses system's locale to interpret it and not everybody
# uses UTF-8.
[wheel]


[metadata]
name = librosewater
version = attr: librosewater.__version__
author = OpenM Project
license = MIT
description = Module for memory handling of processes using psutil, ctypes & pywin32
url = https://github.com/OpenM-Project/librosewater
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
project_urls =
    GitHub = https://github.com/OpenM-Project/librosewater

[options]
install_requires =
    pip
    setuptools
    pywin32
    psutil
python_requires = >=3.8
package_dir=
    =src

[options.packages.find]
where=src
